--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,22 +1,44 @@
-nav {
-    text-align:  center;
-    background-color: rgb(0, 63, 130);
-  
-}
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Raleway:ital,wght@0,400;0,700;1,200&display=swap');
+* {
 
-a {
-    text-decoration: none;
-    color: rgb(85, 47, 47);
-}
-
-
-.content {
-    min-height: 70vh;
-    padding: 2vw;
-    text-align: center;
+    margin: 0%;
+    padding: 0%;
+    font-family: 'Raleway', sans-serif;
+    }
+       
+nav{
+    background-color: #3ab94f;
+    height: 100px;
+    align-items: center ;
     display: flex;
-    flex-direction: column;
-    gap: 1vh;
+    justify-content: space-between;
+    }
+    
+h2{
+    
+        margin-left: 20px;
+    }
+a{
+    text-decoration: none;
+        margin-right: 20px;
+    }
 
-}
+table {
+        border-collapse: collapse;
+        width: 50%;
+        margin: auto;
+        margin-top: 50px;
+        
+       
+      }
+      
+th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid rgb(141, 78, 78);
+        text-align: center;
+      }
+      
+tr:hover {background-color: rgb(228, 102, 57);}
+
 
