--- a/templates/snack_list.html
+++ b/templates/snack_list.html
@@ -1,44 +1,29 @@
-{% extends 'base.html' %}
+{%extends 'base.html'%}
 
 
-{%block navigation %}
+{%block content%}
 
-<nav>
-
-    <a href="{% url 'home' %}">Home Page</a>
-
-</nav>
-
-{% endblock navigation %}
+<br>
+<div>
 
 
-{%block content %}
+    <table>
+    <tr>
+      <th>Purchaser_id</th>
+      <th>Name</th>
+      <th>Check </th>
 
-<div class="content">
+    </tr>
 
-    <h3>Snacks Menu</h3>
-
-    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Impedit, quibusdam possimus perspiciatis maxime iste delectus quod perferendis,gjhgopolmmb dfgfhjgjh
-        reprehenderit dicta vero praesentium veniam recusandae! Deserunt officiis ad tempora impedit! Vero, temporibus.
-    </h4>
-
-
-    <div class="col">
-
-        <h3> Snacks</h3>
-        {% for snack in object_list  %}
-        <div class="desc">
-
-            <h3> {{ snack.name}} : </h3>
-            <h3>{{snack.description}}</h3>
-        </div>
-        {% endfor %}
-
-    </div>
-
-
-
+    {% for i in object_list%}
+    <tr>
+      <td>{{i.id}}</td>
+      <td>{{i.name}}</td>
+      <td> <button><a href="{% url 'snack_detail_1' id=i.id %}" >  More Details</a></button></td>
+    </tr>
+    {%endfor%}
+   
+  </table>
 </div>
 
-{% endblock content %}
+{%endblock content%}
